# bitcoin-metaprotocols-canister

./: .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  makefile  package-lock.json  package.json
src/bitcoin-metaprotocols-canister/: Cargo.toml  bitcoin-metaprotocols-canister.did
src/bitcoin-metaprotocols-canister-backend/: Cargo.toml  bitcoin-metaprotocols-canister-backend.did
src/bitcoin-metaprotocols-canister-backend/src/: lib.rs
src/bitcoin-metaprotocols-canister-frontend/: package.json
src/bitcoin-metaprotocols-canister-frontend/src/: App.js
src/bitcoin-metaprotocols-canister/src/: lib.rs
